--- a/static/css/style.css
+++ b/static/css/style.css
@@ -624,7 +624,8 @@ footer p {
         display: flex; /* মেনুর ভেতরে সার্চ বক্স দেখায় */
         width: 90%; 
         margin: 20px auto; 
-        padding-top: 60px;
+        position: absolute;
+        top: 120px;
         justify-content: flex-start;
     }
     #desktop-search-bar {
@@ -657,7 +658,7 @@ footer p {
         margin-top: auto;
         padding: 10px 0;
         position: absolute;
-        top: 170px;
+        top: 550px;
         width: 100%;
         background-color: var(--primary-bg); /* CHANGED: সাদা ব্যাকগ্রাউন্ড হবে */
          /* CHANGED: হালকা বর্ডার */
@@ -679,7 +680,7 @@ footer p {
         display: flex;
         gap: 10px;
         position: absolute;
-        top: 680px;
+        top: 160px;
         bottom: 0px;
     }
     .developed-by-section .social-links a {
@@ -741,10 +742,10 @@ footer p {
     }
     nav.main-nav ul {
         flex-direction: column;
-        align-items: center;
         width: 100%;
-        margin-bottom: 300px;
-        margin-top: -180px;
+        position: absolute;
+        top: 250px;
+        right: -5px;
     }
     nav.main-nav ul li {
         margin: px 0;
@@ -754,7 +755,8 @@ footer p {
     
     .theme-toggle {
         margin-left: 20px;
-        margin-top: -190px;
+        position: absolute;
+        top: 650px;
         width: 80%;
     }
     .theme-toggle button i {
