--- a/templates/admin/edit_chapter.html
+++ b/templates/admin/edit_chapter.html
@@ -1,8 +1,9 @@
+{# polyquiz/templates/admin/edit_chapter.html #}
 {% extends "admin/admin_layout.html" %}
 {% block title %}অধ্যায় এডিট করুন{% endblock %}
 {% block admin_content %}
     <h2>অধ্যায় এডিট করুন: {{ chapter.name }}</h2>
-    <form method="POST" class="form">
+    <form method="POST" class="form" enctype="multipart/form-data"> {# ADD enctype #}
         {{ form.csrf_token }}
         <p>
             {{ form.name.label }}<br>
@@ -30,6 +31,20 @@
             {% for error in form.is_active.errors %}
                 <span style="color: red;">{{ error }}</span>
             {% endfor %}
+        </p>
+        <p> {# ADDED: Image file field for chapter #}
+            {{ form.image_file.label }}<br>
+            {{ form.image_file() }}
+            {% for error in form.image_file.errors %}
+                <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+            {% if chapter.image_url %}
+                <div style="margin-top: 10px;">
+                    <img src="{{ chapter.image_url }}" alt="{{ chapter.name }} Current Icon" style="max-width: 150px; height: auto; border: 1px solid #ddd;">
+                    <br>
+                    <input type="checkbox" name="remove_image" value="true"> বর্তমান ছবি মুছে ফেলুন
+                </div>
+            {% endif %}
         </p>
         <p>{{ form.submit(value='আপডেট করুন') }}</p>
     </form>
